# insight-client

./: Makefile  Makefile.am  Makefile.in  MaskMapForAppTable.txt  MaskMapForPerfTable.txt  MaskMapForStackTable.txt  MaskMapForTuneTable.txt  README.md  autogen.sh  config.h.in  configure  configure.ac  debug.c  debug.h  geoip.c  geoip.h  main.c  main.h  parse.c  parse.h  report.c  report.h  scripts.h  string-funcs.c  string-funcs.h  test.html  version.h
html/: README.md  curved.line-0.0.2.js  insight.css  insight.js  map.html  pseudoClient.js
maps/: MaskMapForPathTable.txt  MaskMapForStackTable.txt
